fixed a bug where section titles wouldn't change border position at widths between 768px and 992px and fixed a bug where section titles wouldn't align to the right of their column when they spanned more than one line

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@
 
 /* This media query repositions the borders on the section title from underneath the title to the right of it. Responsive borders are not supported natively in bootstrap (e.g. be-md-0) hence the need for this. */
  
- @media only screen and (min-width : 992px) {
+ @media only screen and (min-width : 768px) {
     .section-title {
         /*border-bottom: 0;*/
         border-right: 3px solid var(--primary-color);
